--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ h1 {
 input {
   font-size: 20px;
   padding: 10px;
-  width: 80px;
+  width: 120px;
   text-align: center;
   margin-top: 20px;
   text-transform: uppercase;
@@ -36,6 +36,7 @@ input {
   color: #fff;
   border: 2px solid #4ccdea;
   border-radius: 5px;
+  max-width: 100%;
 }
 
 button {
